[package]
name = "blade-lsp"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "*"

[dependencies]
dashmap = "6.0.1"
log = "0.4.21"
serde = "1.0.204"
serde_json = "1.0.120"
structured-logger = "1.0.3"
tokio = { version = "1.38.0", features = ["full"] }
tower-lsp = "=0.20.0"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
